--- a/learning/eda.ipynb
+++ b/learning/eda.ipynb
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d61ffd55",
    "metadata": {},
    "outputs": [
@@ -2209,8 +2209,8 @@
     }
    ],
    "source": [
-    "sns.set_style(\"whitegrid\")  # Options: \"darkgrid\", \"white\", \"ticks\", \"dark\"\n",
-    "sns.set_palette(\"dark\")  # or try \"muted\", \"deep\", \"bright\"\n",
+    "sns.set_style(\"whitegrid\")  \n",
+    "sns.set_palette(\"dark\")  \n",
     "sns.histplot(df['daily_active_minutes_instagram'], bins=20, kde=True)\n",
     "plt.title(\"Distribution of Daily Active Minutes on Instagram\", fontsize=14)\n",
     "plt.xlabel(\"Daily Active Minutes\", fontsize=12)\n",
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2aa42018",
    "metadata": {},
    "outputs": [
@@ -2240,8 +2240,6 @@
     "    bins=[0, 100, 200, 300, 400, 500],\n",
     "    labels=[\"0–100\", \"100–200\", \"200–300\", \"300–400\", \"400–500\"]\n",
     ")\n",
-    "\n",
-    "# Now use countplot with hue\n",
     "sns.countplot(data=df, x=\"gender\", hue=\"activity_bin\")\n",
     "plt.title(\"Instagram Activity by Gender\")\n",
     "plt.xlabel(\"Gender\")\n",
@@ -2285,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0eaed546",
    "metadata": {},
    "outputs": [
@@ -2342,8 +2340,6 @@
     "    palette=\"Spectral\",   # Vibrant color palette\n",
     "    edgecolor=\"black\"     # Crisp bar edges\n",
     ")\n",
-    "\n",
-    "# Add value labels on top of bars\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{p.get_height():.2f}', \n",
     "                (p.get_x() + p.get_width() / 2., p.get_height()), \n",
@@ -2352,25 +2348,19 @@
     "                textcoords='offset points',\n",
     "                fontsize=10, fontweight='bold', color='black')\n",
     "\n",
-    "# Titles and labels with style\n",
     "plt.title(\"🔥 Average Reels Watched per Day by Activity Bin 🔥\", fontsize=14, fontweight='bold', color=\"#333\")\n",
     "plt.xlabel(\"⏱️ Daily Active Minutes Bin\", fontsize=12, color=\"#555\")\n",
     "plt.ylabel(\"📱 Average Reels Watched per Day\", fontsize=12, color=\"#555\")\n",
-    "\n",
-    "# Rotate x labels for readability\n",
     "plt.xticks(rotation=30, fontsize=11)\n",
     "plt.yticks(fontsize=11)\n",
-    "\n",
-    "# Add grid for better readability\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.6)\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1fd1f2c1",
    "metadata": {},
    "outputs": [
@@ -2412,11 +2402,9 @@
     "    y='daily_active_minutes_instagram',\n",
     "    data=df,\n",
     "    ci=None,\n",
-    "    palette=\"Spectral\",   # Vibrant palette\n",
-    "    edgecolor=\"black\"     # Crisp edges\n",
+    "    palette=\"Spectral\",   \n",
+    "    edgecolor=\"black\"     \n",
     ")\n",
-    "\n",
-    "# Add value labels on top of bars\n",
     "for p in ax.patches:\n",
     "    ax.annotate(f'{p.get_height():.1f}', \n",
     "                (p.get_x() + p.get_width() / 2., p.get_height()), \n",
@@ -2424,18 +2412,13 @@
     "                xytext=(0, 5), textcoords='offset points',\n",
     "                fontsize=10, fontweight='bold', color='black')\n",
     "\n",
-    "# Titles and labels with style\n",
     "plt.title(\"📱 Daily Instagram Activity by Employment Status\", fontsize=15, fontweight='bold', color=\"#333\")\n",
     "plt.xlabel(\"Employment Status\", fontsize=12, color=\"#555\")\n",
     "plt.ylabel(\"Average Daily Active Minutes\", fontsize=12, color=\"#555\")\n",
     "\n",
-    "# Rotate x labels for readability\n",
     "plt.xticks(rotation=30, fontsize=11)\n",
     "plt.yticks(fontsize=11)\n",
-    "\n",
-    "# Add grid for better readability\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.6)\n",
-    "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -2444,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "8d11fcac",
    "metadata": {},
    "outputs": [
@@ -2475,17 +2458,17 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 6))  # Adjust size as needed\n",
+    "plt.figure(figsize=(10, 6))  \n",
     "\n",
     "ax = sns.barplot(\n",
     "    x='age',\n",
     "    y='daily_active_minutes_instagram',\n",
-    "    data=df_filtered,         # Make sure this is your filtered DataFrame with 5-year gaps\n",
+    "    data=df_filtered,         \n",
     "    palette='Set2',\n",
     "    edgecolor='black'\n",
     ")\n",
     "\n",
-    "# 🏷️ Add value labels on top of each bar\n",
+    "# value labels on top of each bar\n",
     "for p in ax.patches:\n",
     "    height = p.get_height()\n",
     "    ax.annotate(f'{height:.1f}', \n",
@@ -2494,12 +2477,11 @@
     "                xytext=(0, 5), textcoords='offset points',\n",
     "                fontsize=10, fontweight='bold', color='black')\n",
     "\n",
-    "# 📌 Titles and labels\n",
+    "# Titles and labels\n",
     "plt.title(\"📱 Instagram Activity by Age (5-Year Gaps)\", fontsize=15, fontweight='bold')\n",
     "plt.xlabel(\"Age\", fontsize=12)\n",
     "plt.ylabel(\"Daily Active (Minutes)\", fontsize=12)\n",
     "\n",
-    "# 🧾 Rotate x-axis labels if needed\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
     "plt.tight_layout()\n",
@@ -2549,7 +2531,7 @@
     "    edgecolor='black'\n",
     ")\n",
     "\n",
-    "# Add value labels on top of each bar\n",
+    "# value labels on top of each bar\n",
     "for p in ax.patches:\n",
     "    height = p.get_height()\n",
     "    ax.annotate(f'{height:.1f}', \n",
@@ -2558,7 +2540,7 @@
     "                xytext=(0, 5), textcoords='offset points',\n",
     "                fontsize=10, fontweight='bold', color='black')\n",
     "\n",
-    "# 📌 Titles and labels\n",
+    "# Titles and labels\n",
     "plt.title(\"📚 Instagram Activity by Education Level\", fontsize=15, fontweight='bold')\n",
     "plt.xlabel(\"Education Level\", fontsize=12)\n",
     "plt.ylabel(\"Avg Daily Active Minutes\", fontsize=12)\n",
@@ -2576,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "cd9f5909",
    "metadata": {},
    "outputs": [
@@ -2609,7 +2591,6 @@
    "source": [
     "plt.figure(figsize=(10,6))\n",
     "\n",
-    "# Base violin plot\n",
     "ax = sns.violinplot(\n",
     "    x=\"education_level\", \n",
     "    y=\"likes_given_per_day\", \n",
@@ -2618,10 +2599,8 @@
     "    inner=\"quartile\"\n",
     ")\n",
     "\n",
-    "# Calculate averages and max values per education level\n",
     "group_stats = df.groupby(\"education_level\")[\"likes_given_per_day\"].agg(['mean','max']).reset_index()\n",
     "\n",
-    "# Add annotations for average and max\n",
     "for i, row in group_stats.iterrows():\n",
     "    # Average\n",
     "    ax.annotate(f'Avg: {row[\"mean\"]:.1f}', \n",
@@ -2651,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9336de81",
    "metadata": {},
    "outputs": [
@@ -2682,20 +2661,17 @@
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "\n",
-    "# Use a bold, high-contrast palette\n",
     "ax = sns.boxplot(\n",
     "    x=\"gender\",\n",
     "    y=\"ads_clicked_per_day\",\n",
     "    data=df,\n",
-    "    palette=\"dark\",     # 🔥 Bold color palette\n",
-    "    linewidth=2.5,           # Thicker box edges\n",
-    "    fliersize=4              # Size of outlier dots\n",
+    "    palette=\"dark\",     \n",
+    "    linewidth=2.5,           \n",
+    "    fliersize=4             \n",
     ")\n",
     "\n",
-    "# Calculate stats per gender\n",
     "group_stats = df.groupby(\"gender\")[\"ads_clicked_per_day\"].agg(['mean','max']).reset_index()\n",
     "\n",
-    "# Add annotations\n",
     "for i, row in group_stats.iterrows():\n",
     "    # Average\n",
     "    ax.annotate(f'Avg: {row[\"mean\"]:.1f}', \n",
